load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bazel-remote-cache-client_lib",
    srcs = [
        "bazel_remote_cache.go",
        "cmd_ac.go",
        "cmd_ac_get.go",
        "cmd_cas.go",
        "cmd_cas_get.go",
        "main.go",
        "output.go",
    ],
    importpath = "github.mpi-internal.com/jean-baptiste-bronisz/bazel-remote-cache-client/cmd/bazel-remote-cache-client",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_fatih_color//:color",
        "@com_github_spf13_cobra//:cobra",
        "@go_googleapis//google/rpc:code_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bazel-remote-cache-client",
    embed = [":bazel-remote-cache-client_lib"],
    visibility = ["//visibility:public"],
)
