load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bazel-remote-cache-client_lib",
    srcs = [
        "cmd_ac.go",
        "cmd_ac_get.go",
        "cmd_cas.go",
        "cmd_cas_get.go",
        "main.go",
        "output.go",
    ],
    importpath = "github.mpi-internal.com/jean-baptiste-bronisz/bazel-remote-cache-client/cmd/bazel-remote-cache-client",
    visibility = ["//visibility:private"],
    x_defs = {"main.appVersion": "{STABLE_VERSION}"},
    deps = [
        "//internal/bzlremotecache",
        "@com_github_fatih_color//:color",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "bazel-remote-cache-client",
    embed = [":bazel-remote-cache-client_lib"],
    visibility = ["//visibility:public"],
)
