load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bazel-remote-cache-client_lib",
    srcs = [
        "cmd_ac.go",
        "cmd_ac_get.go",
        "cmd_cas.go",
        "cmd_cas_get.go",
        "cmd_log.go",
        "main.go",
        "output.go",
    ],
    importpath = "github.com/leboncoin/bazel-remote-cache-client/cmd/bazel-remote-cache-client",
    visibility = ["//visibility:private"],
    x_defs = {"main.appVersion": "{STABLE_VERSION}"},
    deps = [
        "//pkg/bzlremotecache",
        "//pkg/bzlremotelogging",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
        "@com_github_fatih_color//:color",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "bazel-remote-cache-client",
    embed = [":bazel-remote-cache-client_lib"],
    visibility = ["//visibility:public"],
)
