load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bzlremotecache",
    srcs = [
        "action_result.go",
        "client.go",
        "digest.go",
    ],
    importpath = "github.mpi-internal.com/jean-baptiste-bronisz/bazel-remote-cache-client/internal/bzlremotecache",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@go_googleapis//google/rpc:code_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)
