load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bzlremotecache",
    srcs = [
        "client.go",
        "digest.go",
    ],
    importpath = "github.com/leboncoin/bazel-remote-cache-client/pkg/bzlremotecache",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@go_googleapis//google/rpc:code_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)
