load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# This file is copied in this repository to use golangci-lint.
# $ bazel build //pkg/bzlremotelogging && \
#     cp -vf "$(find -L bazel-bin -name remote_execution_log.pb.go)" pkg/bzlremotelogging/
# gazelle:exclude remote_execution_log.pb.go

genrule(
    name = "remote_execution_log_proto_file",
    srcs = ["@bazel_tools//src/main/protobuf:remote_execution_log.proto"],
    outs = ["remote_execution_log.proto"],
    cmd = "cp $< $@",
    visibility = ["//visibility:private"],
)

# keep
proto_library(
    name = "remote_logging_proto",
    srcs = [":remote_execution_log_proto_file"],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/bytestream:bytestream_proto",
        "@go_googleapis//google/longrunning:longrunning_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)

go_proto_library(
    name = "bzlremotelogging",
    importpath = "github.com/leboncoin/bazel-remote-cache-client/pkg/bzlremotelogging",
    proto = ":remote_logging_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
    ],
)
